[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/world.gd" type="Script" id=1]
[ext_resource path="res://scripts/nave.gd" type="Script" id=2]
[ext_resource path="res://assets/imgs/player/nave.png" type="Texture" id=3]
[ext_resource path="res://assets/imgs/player/fogo_secundario.png" type="Texture" id=4]
[ext_resource path="res://assets/imgs/player/fogo_primario.png" type="Texture" id=5]
[ext_resource path="res://assets/imgs/scene/chao.png" type="Texture" id=6]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 960, 32 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="nave" type="KinematicBody2D" parent="."]
position = Vector2( 928, 960 )
scale = Vector2( 2, 2 )
z_index = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="nave"]
scale = Vector2( 0.05, 0.05 )
z_index = 1
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="nave"]
shape = SubResource( 1 )

[node name="FogoSecEsc" type="Sprite" parent="nave"]
visible = false
position = Vector2( -15.3203, 31 )
rotation = 3.14159
scale = Vector2( 0.015, 0.01 )
texture = ExtResource( 4 )

[node name="FogoPrinc" type="Sprite" parent="nave"]
visible = false
position = Vector2( 0, 32 )
rotation = 3.14159
scale = Vector2( 0.009, 0.009 )
texture = ExtResource( 5 )

[node name="FogoSecDir" type="Sprite" parent="nave"]
visible = false
position = Vector2( 15.2637, 31 )
rotation = 3.14159
scale = Vector2( 0.015, 0.01 )
texture = ExtResource( 4 )

[node name="chao" type="StaticBody2D" parent="."]
position = Vector2( 960, 1056 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="chao"]
position = Vector2( 3.02701, 0 )
scale = Vector2( 29.9054, 1 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="chao"]
show_behind_parent = true
shape = SubResource( 2 )
